objects/advitya__QueryStorage__c.object
<CustomObject>
    <fields>
        <fullName>advitya__Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>advitya__Criteria_Field_Label__c</fullName>
        <label>Criteria Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__Cron__c</fullName>
        <label>Cron</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advitya__Formula_Time_Remain__c</fullName>
        <formula>DATETIMEVALUE(advitya__Next_Schedule_Run_time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Time Remain</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>advitya__JobID__c</fullName>
        <label>JobID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__Last_modified_date__c</fullName>
        <label>Last modified date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advitya__Next_Schedule_Run_time__c</fullName>
        <label>Next Schedule Run time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>advitya__Object_label__c</fullName>
        <label>Object label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__Occurence__c</fullName>
        <label>Occurence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advitya__Time_Remain__c</fullName>
        <formula>IF(ISBLANK(advitya__Next_Schedule_Run_time__c), &quot;Job Is not Shedule&quot;,
TEXT(
 FLOOR(advitya__Next_Schedule_Run_time__c- Now())
)  &amp; &quot; : &quot; &amp;
TEXT(
ROUND(MOD((advitya__Next_Schedule_Run_time__c- Now())*24,24),0)
         )  &amp;&quot; :&quot; &amp;
TEXT(
ROUND(MOD((advitya__Next_Schedule_Run_time__c- Now())*1440,60),0)
) &amp;&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__addonFieldLabel__c</fullName>
        <label>addonFieldLabel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>advitya__addonFields__c</fullName>
        <label>addonFields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>advitya__isValued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isValued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advitya__masterField__c</fullName>
        <label>masterField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__masterValue__c</fullName>
        <label>masterValue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__qCriteria__c</fullName>
        <label>qCriteria</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__qObject__c</fullName>
        <label>qObject</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>QueryStorage</label>
    <listViews>
        <fullName>advitya__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QueryStorage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>